# webapp-booky

./: .env.example  .gitignore  AGENTS.md  E2E_TEST_FINALIZATION_REPORT.md  FINAL_DELIVERABLE.md  HANDOFF_SUMMARY.md  README.md  WEBAM_TESTING_SUMMARY.md  WEBCAM_ERROR_RESEARCH.md  WEBCAM_FIXES_SUMMARY.md  docker-compose.full.yml  docker-compose.production.yml  docker-compose.watchtower.yml  docker-compose.yml  eslint.config.js  frontend-vercel.json  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  progress.md  regression-tests.test.ts  service-worker-test.test.ts  tailwind.config.js  test-camera-standalone.html  tsconfig.json  tsconfig.test.json  validate-webcam-fixes.js  vercel.json  vite.config.ts  vitest.config.ts
.beads/: issues.jsonl  sync_base.jsonl
backend/: .env.example  .env.production  .env.test  DEPLOYMENT.md  Dockerfile  FILE_STORAGE.md  LOGGING.md  PRODUCTION_README.md  SECRETS_MANAGEMENT.md  SECURITY.md  SYNC_API.md  docker-compose.prod.yml  docker-compose.yml  jest.config.ts  monitoring.yml  nginx.conf  package-lock.json  package.json  playwright.config.ts  prometheus.yml
backend-lite/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
dev-dist/: sw.js
docker/: .env.production  .env.production.example
docs/: CICD_PIPELINE.md  COMPREHENSIVE_VALIDATION_REPORT.md  FEATURE_OVERVIEW.md  FINALIZATION_LEARNINGS.md  IMPLEMENTATION_SUMMARY.md  NAS_DEPLOYMENT.md  PLAN.md  TODO.md  (+5 more)
tools/tickteer/: .gitignore  README.md  pyproject.toml  tickteer.py
tools/tickteer/tests/: test_locking.py
(+210 files in other folders)
