[project]
name = "tickteer"
version = "1.0.0"
description = "A CLI tool to fetch and display tickets from Beads (bd) sorted by priority"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Booky Team" }
]
keywords = ["tickets", "beads", "cli", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
tickteer = "tickteer:main"

[project.urls]
Homepage = "https://github.com/yourusername/tickteer"
Repository = "https://github.com/yourusername/tickteer"
Issues = "https://github.com/yourusername/tickteer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
